# trials

./: LICENSE  Makefile  README.md  app.py  main.py  package-lock.json  pyproject.toml  requirements.txt
api/: index.py
back_end/: llm_gemini.py  main.py  yt_transcript.py
fast_api_front_end/: main.py
front_end/: package-lock.json  package.json
front_end/src/: App.js  index.css
frontend/src/: App.js  ChatBubble.js  index.css
research/: app.py  trials.ipynb
tests/: app.py  test_2.py  test_file.py
